twitter-mimic/src/ui/styles/home.module.css
.header {
  display: flex;
  align-items: center;
  border-bottom: 1px solid #eee;
  height: 49px;
  position: sticky;
  top: 0;
  width: 100%;
  background: #ffffffaa;
  backdrop-filter: blur(5px);
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 0 15px;
}

.header p {
  font-size: 21px;
  font-weight: 700;
  color: var(--primary-color);
}

.header svg {
  cursor: pointer;
  border-radius: 50%;
}

.header svg:hover {
  background: radial-gradient(#00336615 15%, transparent 16%);
  background-size: 180px 180px;
  background-position: center;
}

.header svg:hover g {
  stroke: var(--primary-color-alt);
}

.section {
  color: var(--primary-color);
  flex: 1;
  overflow-y: auto;
}

/* Tweet */

/* Tweet Like Modal */

.likeModalDiv {
  display: flex;
  flex-direction: column;
  position: absolute;
  bottom: 0;
  margin-bottom: 2rem;
  background: white;
  border: 1px solid var(--primary-opacity);
  border-radius: 8px;
  width: auto;
  min-height: 50px;
  max-height: calc(100% - 2rem);
  z-index: 10;
  overflow-y: auto;
}

.article {
  display: flex;
  flex-direction: column;
  padding: 10px 15px;
  border-bottom: 1px solid #eee;
  width: 100%;
  position: relative;
}

.tweetContentInfo {
  display: flex;
  width: 100%;
}

.tweetContent {
  width: 100%;
}

.article > section {
  overflow: hidden;
  overflow-wrap: break-word;
  width: 100%;
}

.tweetHeader {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.tweetHeader svg {
  border-radius: 9999px;
}

.tweetHeader svg:hover {
  background: radial-gradient(#00336615 15%, transparent 16%);
  background-size: 180px 180px;
  background-position: center;
  stroke: var(--primary-color-alt);
}

.retweetHeader {
  display: flex;
  align-items: center;
  justify-content: flex-start;
  gap: 0.5rem;
}

.retweetHeader img {
  width: 40px;
  height: 40px;
}

.article:hover {
  background: #f5f8fa;
  cursor: pointer;
}

.avatarDiv {
  flex: 0 0 50px;
  margin-right: 15px;
}

.p {
  line-height: 1.3125;
  margin: 0;
  color: var(--secondary-color);
}

.link:hover {
  text-decoration: underline;
  color: gray;
}

.img {
  height: auto;
  width: 95%;
  border-radius: 10px;
  margin: 10px;
}

.nav {
  bottom: 0;
  border-top: 1px solid #eee;
  height: 49px;
  position: sticky;
  width: 100%;
  background: #fff;
  display: flex;
  justify-content: space-around;
}

.nav a {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 100%;
  width: 2.5rem;
}

.nav a:hover {
  background: radial-gradient(#00336615 15%, transparent 16%);
  background-size: 180px 180px;
  background-position: center;
}

.selectedNav {
  background: radial-gradient(#00336627 15%, transparent 16%);
  background-size: 180px 180px;
  background-position: center;
  stroke: var(--secondary-color);
}

.footer {
  margin-top: 1rem;
  display: flex;
  justify-content: space-around;
  align-items: center;
}

.footer button {
  display: flex;
  padding: 0.3rem 1rem;
  justify-content: space-around;
  align-items: center;
  gap: 5px;
  border-radius: 9999px;
}

.footer button span {
  color: var(--primary-color);
}

.footer button:hover {
  background: radial-gradient(#00336615 15%, transparent 16%);
  background-size: 280px 270px;
  background-position: center;
}

.footer button:hover svg {
  fill: var(--primary-color-alt);
}

.footer button:hover svg path {
  stroke: var(--primary-color-alt);
}

.footer button svg {
  fill: var(--primary-color);
}

.footer button svg path {
  stroke: var(--primary-color);
}

.footer button span {
  font-family: system-ui;
}

.footer button span:hover {
  text-decoration: underline;
}

/* Modal */

.opacityOpen {
  opacity: 1;
}

.opacityClosed {
  opacity: 0;
  pointer-events: none;
}

/* Tweet Menu*/

.tweetMenuDiv {
  position: relative;
}

.tweetMenuDiv > div {
  position: absolute;
  right: 0;
  padding: 0.5rem;
  width: 11rem;
  background-color: #475569;
  border-radius: 0.375rem;
  transition: opacity 0.2s ease-in-out;
}

.tweetMenuDiv > div button {
  display: flex;
  gap: 1rem;
  color: white;
  transition: color 0.2s ease-in-out;
  font-family: system-ui;
  font-weight: 500;
}

.tweetMenuDiv > div button:hover {
  color: var(--primary-color-alt);
}

.tweetMenuDiv > div button:nth-child(2):hover {
  color: rgb(255, 0, 0);
}




@keyframes moveAndScale {
  0% {
    transform: scale(1);
  }
  20% {
    transform: scale(1.2);
  }
  30% {
    transform: translateX(-5px) scale(1.2);
  }
  40% {
    transform: translateX(-10px) scale(1.2);
  }
  50% {
    transform: translateX(-5px) scale(1.2);
  }
  60% {
    transform: translateX(0) scale(1.2);
  }
  70% {
    transform: scale(1.1);
  }
  100% {
    transform: scale(1);
  }
}

.imageHover {
  transition: transform 0.3s ease;
}

.imageHover:hover {
  animation: moveAndScale 1.2s ease infinite;
}

